manifests/wolfenstein/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wolfenstein
  namespace: wolfenstein
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wolfenstein
  template:
    metadata:
      labels:
        app: wolfenstein
    spec:
      containers:
        - name: wolfenstein
          image: srenkens/wolfenstein3d:latest
          ports:
            - containerPort: 8888
