manifests/wolfenstein/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wolfenstein
  namespace: wolfenstein
spec:
  selector:
    app: wolfenstein
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
