manifests/wolfenstein/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wolfenstein
  namespace: wolfenstein
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx

  rules:
    - host: wolfram.techdev.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wolfenstein
                port:
                  number: 80

  tls:
    - hosts:
        - wolfram.techdev.local
      secretName: esm2-techdev-wildcard-tls
